ajout des catégories

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+        <section>
+            <p>Présentation</p>
+        </section>
+        <section>
+            <p>Projet</p>
+        </section>
+        <section>
+            <p>Skill</p>
+        </section>
     </body>
 </html>
