--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               $("#footer").load("footer.html"); 
             });
         </script>
-        <link rel="stylesheet" href="/style/Hstyle.css">
+        <link rel="stylesheet" href="/style/Istyle.css">
     </head>
     <body>
         <!--[if lt IE 7]>
