--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <section>
+        <section class="accueil">
             <p>Présentation</p>
         </section>
-        <section>
+        <section class="projets">
             <p>Projet</p>
         </section>
-        <section>
+        <section class="projets">
             <p>Skill</p>
         </section>
     </body>
