--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <section class="accueil">
             <p>Présentation</p>
         </section>
-        <section class="projets">
+        <section class="secondaire">
             <p>Projet</p>
         </section>
-        <section class="projets">
+        <section class="secondaire">
             <p>Skill</p>
         </section>
     </body>
