--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <section class="accueil">
-            <h1>Thomas REYMOND</h1>
+            <h1>Thomas R</h1>
             <p>Je suis étudiant en BUT informatique</p>
         </section>
         <section class="secondaire">
