Update: css & index.html

--- a/index.html
+++ b/index.html
@@ -29,11 +29,32 @@
             <h1>Thomas R</h1>
             <p>Je suis étudiant en BUT informatique</p>
         </section>
-        <section class="secondaire">
-            <p>Projet</p>
+        <section class="secondaire" id="projets">
+            <div>
+                <h2>Projet</h2>
+            </div>
+            <div>
+                <article>
+                    <img src="img/1.jpg" alt="image">
+                    <h3>Création d'un site web</h3>
+                    <p>Un site de Econocom a destination de collégiens. Le but est de leur faire découvrir cette entreprise et ses activités ainsi que proposer des stages.</p>
+                </article>
+                <article>
+                    <img src="img/1.jpg" alt="image">
+                    <h3>Projet II</h3>
+                    <p>Un site de Econocom a destination de collégiens. Le but est de leur faire découvrir cette entreprise et ses activités ainsi que proposer des stages.</p>
+                </article>
+                <article>
+                    <img src="img/1.jpg" alt="image">
+                    <h3>Projet III</h3>
+                    <p>Un site de Econocom a destination de collégiens. Le but est de leur faire découvrir cette entreprise et ses activités ainsi que proposer des stages.</p>
+                </article>
+            </div>
         </section>
+        <!-- FUTURE SECTION
         <section class="secondaire">
             <p>Skill</p>
         </section>
+        -->
     </body>
 </html>
