--- a/footer.html
+++ b/footer.html
@@ -2,19 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>header</title>
-        <link rel="stylesheet" href="style/styleHeader.css">
+        <title>footer</title>
     </head>
     <body>
         <nav>
-            <img src="images/logo.svg" alt="logo" class="logoNav">
+            <img src="images/logo.svg" alt="logo">
             <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="page1.html">Écologie</a></li>
-                <li><a href="page2.html">Valeurs</a></li>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">Écologie</a></li>
+                <li><a href="#">Valeurs</a></li>
             </ul>
             <ul>
-                <li><a href="contact.html" class="contact">Contact</a></li>
+                <li><a href="#" class="contact">Contact</a></li>
             </ul>
         </nav>
     </body>
