--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div>
                 <article>
-                    <img src="img/1.jpg" alt="image">
+                    <img src="image/Prjoet_Econocom.png" alt="Site web réaliser">
                     <h3>Création d'un site web</h3>
                     <p>Un site de Econocom a destination de collégiens. Le but est de leur faire découvrir cette entreprise et ses activités ainsi que proposer des stages.</p>
                 </article>
