--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <![endif]-->
         <section class="accueil">
             <h1>Thomas R</h1>
-            <p>Je suis étudiant en BUT informatique</p>
+            <p>Étudiant en BUT informatique</p>
         </section>
         <section class="secondaire" id="projets">
             <div>
@@ -28,12 +28,12 @@
                 <article>
                     <img src="image/Projet_Econocom.png" alt="Site web réaliser" class="img">
                     <h3>Création d'un site web</h3>
-                    <p>Un site de Econocom a destination de collégiens. Le but est de leur faire découvrir cette entreprise et ses activités ainsi que proposer des stages.</p>
+                    <p>Un site web à destination de collégiens. Le but est de leur faire découvrir l'entreprise <strong>Econocom</strong> et ses activités pour leur proposer des stages.</p>
                 </article>
                 <article>
-                    <img src="img/1.jpg" alt="image">
-                    <h3>Projet II</h3>
-                    <p>Un site de Econocom a destination de collégiens. Le but est de leur faire découvrir cette entreprise et ses activités ainsi que proposer des stages.</p>
+                    <img src="image/SEA_BDD_Titanic.PNG" alt="Image du SEA (Shéma Entité Association) de la base de donnée" class="img">
+                    <h3>Base de donnée sur le Titanic</h3>
+                    <p>Une base de donnée sur l'accident du Titanic permettant d'obtenir des statistique et du contexte pour comprendres les raisons du nombre important de victimes.</p>
                 </article>
                 <article>
                     <img src="img/1.jpg" alt="image">
