Update All style.css & add contact.html

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             </div>
             <div>
                 <article>
-                    <img src="image/Projet_Econocom.png" alt="Site web réaliser" class="img">
+                    <img src="image/Site econocom(3 2).png" alt="Site web réaliser" class="img">
                     <h3>Création d'un site web</h3>
                     <p>Un site web à destination de collégiens. Le but est de leur faire découvrir l'entreprise <strong>Econocom</strong> et ses activités pour leur proposer des stages.</p>
                 </article>
                 <article>
-                    <img src="image/SEA_BDD_Titanic.PNG" alt="Image du SEA (Shéma Entité Association) de la base de donnée" class="img">
+                    <img src="image/SEA_BDD_Titanic(3 2).png" alt="Image du SEA (Shéma Entité Association) de la base de donnée" class="img">
                     <h3>Base de donnée sur le Titanic</h3>
                     <p>Une base de donnée sur l'accident du Titanic permettant d'obtenir des statistique et du contexte pour comprendres les raisons du nombre important de victimes.</p>
                 </article>
@@ -47,5 +47,10 @@
             <p>Skill</p>
         </section>
         -->
+        <section class="secondaire footer">
+            <a href="contact.html">
+                <button> Me contacter </button>
+            </a>
+        </section>
     </body>
 </html>
