Update index.html : ajout RS & Add logo.svg

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Accueil</title>
+        <title>R Thomas Pf</title>
         <link rel="stylesheet" href="/style/Istyle.css">
     </head>
     <body>
@@ -19,12 +19,23 @@
         <section class="accueil">
             <h1>Thomas R</h1>
             <p>Étudiant en BUT informatique</p>
+            <article class="carteResau"><!--Liens vers des reseaux sociaux-->
+                <!--<a href="https://www.linkedin.com/in/thomas-roux-1b1b3b1b3/" title="Linkedin">
+                    <img src="image/linkedin.png" alt="linkedin">
+                    </a>-->
+                    <a href="https://github.com/Thomas-381" class="social" target="_blank">
+                        <img src="image/logo/github.svg" alt="github" class="socialImg">
+                    </a>
+                    <a href="" class="social" target="_blank">
+                        <img src="image/logo/discord.svg" alt="discord" class="socialImg">
+                    </a>
+            </article>
         </section>
         <section class="secondaire" id="projets">
             <div>
                 <h2>Projet</h2>
             </div>
-            <div>
+            <div class="carteProjets">
                 <article>
                     <img src="image/Site econocom(3 2).png" alt="Site web réaliser" class="img">
                     <h3>Création d'un site web</h3>
