Update index.html : RS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Thomas R</h1>
             <p>Étudiant en BUT informatique</p>
             <article class="carteResau"><!--Liens vers des reseaux sociaux-->
-                <!--<a href="https://www.linkedin.com/in/thomas-roux-1b1b3b1b3/" title="Linkedin">
+                <!--<a href="https://www.linkedin.com/in/XXXXXXXXX" title="Linkedin">
                     <img src="image/linkedin.png" alt="linkedin">
                     </a>-->
                     <a href="https://github.com/Thomas-381" class="social" target="_blank">
@@ -28,6 +28,11 @@
                     </a>
                     <a href="" class="social" target="_blank">
                         <img src="image/logo/discord.svg" alt="discord" class="socialImg">
+                    </a>
+                    <a href="https://https://fr.namemc.com/profile/THOMASLEO" class="social" target="_blank">
+                        <svg style="background-color: transparent; --darkreader-inline-bgcolor:transparent;" viewBox="-8 -8 16 16" shape-rendering="crispEdges" class="align-top astro-FEJ2OEAK" width="35px" height="35px" data-darkreader-inline-bgcolor="">
+                            <path d="M-5-5L+3-5L+3-3L+5-3L+5+5L+3+5L+3-3L-3-3L-3+5L-5+5" style="fill: #FFFFF0;"></path>
+                        </svg>
                     </a>
             </article>
         </section>
