Update add animation & font upgrade

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <section class="accueil">
+        <section class="accueil slide-in-left">
             <h1>Thomas R</h1>
             <p>Étudiant en BUT informatique</p>
             <article class="carteResau"><!--Liens vers des reseaux sociaux-->
