--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     <p>Une base de donnée sur l'accident du Titanic permettant d'obtenir des statistique et du contexte pour comprendres les raisons du nombre important de victimes.</p>
                 </article>
                 <article>
-                    <img src="img/1.jpg" alt="image">
-                    <h3>Projet III</h3>
-                    <p>Un site de Econocom a destination de collégiens. Le but est de leur faire découvrir cette entreprise et ses activités ainsi que proposer des stages.</p>
+                    <img src="image/Projet_Depeches.png" alt="Depeches de different types">
+                    <h3>Classification automatique</h3>
+                    <p>Un algorithme de classification de dépche automatique graçe à la génération d'un dictionnaire de façon automatisée</p>
                 </article>
             </div>
         </section>
