--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             </div>
             <div class="carteProjets">
                 <article>
-                    <img src="image/Site econocom(3 2).png" alt="Site web réaliser" class="img">
+                    <img src="image/Site econocom(3 2).png" class="img" alt="Site web réaliser">
                     <h3>Création d'un site web</h3>
                     <p>Un site web à destination de collégiens. Le but est de leur faire découvrir l'entreprise <strong>Econocom</strong> et ses activités pour leur proposer des stages.</p>
                 </article>
                 <article>
-                    <img src="image/SEA_BDD_Titanic(3 2).png" alt="Image du SEA (Shéma Entité Association) de la base de donnée" class="img">
+                    <img src="image/SEA_BDD_Titanic(3 2).png" class="img" alt="Image du SEA (Shéma Entité Association) de la base de donnée">
                     <h3>Base de donnée sur le Titanic</h3>
                     <p>Une base de donnée sur l'accident du Titanic permettant d'obtenir des statistique et du contexte pour comprendres les raisons du nombre important de victimes.</p>
                 </article>
                 <article>
-                    <img src="image/Projet_Depeches.png" alt="Depeches de different types">
+                    <img src="image/Projet_Depeches.png" class="img" alt="Depeches de different types">
                     <h3>Classification automatique</h3>
                     <p>Un algorithme de classification de dépche automatique graçe à la génération d'un dictionnaire de façon automatisée</p>
                 </article>
