Update index.html & IStyle.css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="https://github.com/Thomas-381" class="social" target="_blank">
                         <img src="image/logo/github.svg" alt="github" class="socialImg">
                     </a>
-                    <a href="" class="social" target="_blank">
+                    <a href="" class="social tooltip-container" target="_blank">
                         <img src="image/logo/discord.svg" alt="discord" class="socialImg">
                     </a>
                     <a href="https://https://fr.namemc.com/profile/THOMASLEO" class="social" target="_blank">
@@ -64,6 +64,7 @@
         </section>
         -->
         <section class="secondaire footer">
+            <!-- https://uiverse.io/cssbuttons-io/funny-dog-69 -->
             <a href="contact.html">
                 <button> Me contacter </button>
             </a>
