--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>R Thomas Pf</title>
-        <link rel="stylesheet" href="/style/Istyle.css">
+        <link rel="stylesheet" href="/style/Style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -26,13 +26,11 @@
                     <a href="https://github.com/Thomas-381" class="social" target="_blank">
                         <img src="image/logo/github.svg" alt="github" class="socialImg">
                     </a>
-                    <a href="" class="social tooltip-container" target="_blank">
+                    <a href="https://discord.com/users/397106386129125376" class="social" target="_blank">
                         <img src="image/logo/discord.svg" alt="discord" class="socialImg">
                     </a>
                     <a href="https://https://fr.namemc.com/profile/THOMASLEO" class="social" target="_blank">
-                        <svg style="background-color: transparent; --darkreader-inline-bgcolor:transparent;" viewBox="-8 -8 16 16" shape-rendering="crispEdges" class="align-top astro-FEJ2OEAK" width="35px" height="35px" data-darkreader-inline-bgcolor="">
-                            <path d="M-5-5L+3-5L+3-3L+5-3L+5+5L+3+5L+3-3L-3-3L-3+5L-5+5" style="fill: #FFFFF0;"></path>
-                        </svg>
+                        <img src="image/logo/Namemc.svg" alt="Namemc" class="socialImg">
                     </a>
             </article>
         </section>
