--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -14,7 +14,8 @@
     </head>
     <body>
         <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser.
+                Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <section class="accueil slide-in-left">
             <h1>Thomas R</h1>
@@ -42,17 +43,31 @@
                 <article>
                     <img src="image/Site econocom(3 2).png" class="img" alt="Site web réaliser">
                     <h3>Création d'un site web</h3>
-                    <p>Un site web à destination de collégiens. Le but est de leur faire découvrir l'entreprise <strong>Econocom</strong> et ses activités pour leur proposer des stages.</p>
+                    <p>Un site web à destination de collégiens. Le but est de leur faire 
+                        découvrir l'entreprise <strong>Econocom</strong> et ses activités pour leur proposer des stages.</p>
+                    <figure>
+                        <img src="image/logo/html5.svg" alt="Html" class="logo">
+                        <img src="image/logo/css3.svg" alt="Css" class="logo">
+                    </figure>
                 </article>
                 <article>
                     <img src="image/SEA_BDD_Titanic(3 2).png" class="img" alt="Image du SEA (Shéma Entité Association) de la base de donnée">
                     <h3>Base de donnée sur le Titanic</h3>
-                    <p>Une base de donnée sur l'accident du Titanic permettant d'obtenir des statistique et du contexte pour comprendres les raisons du nombre important de victimes.</p>
+                    <p>Une base de donnée sur l'accident du Titanic permettant d'obtenir des 
+                        statistique et du contexte pour comprendres les raisons du nombre important de victimes.</p>
+                    <figure>
+                        <img src="image/logo/postgresql.svg" alt="Postgresql" class="logo">
+                        <img src="image/logo/database.svg" alt="Database" class="logo">
+                    </figure>
                 </article>
                 <article>
                     <img src="image/Projet_Depeches.png" class="img" alt="Depeches de different types">
                     <h3>Classification automatique</h3>
-                    <p>Un algorithme de classification de dépche automatique graçe à la génération d'un dictionnaire de façon automatisée</p>
+                    <p>Un algorithme de classification de dépche automatique graçe à 
+                        la génération d'un dictionnaire de façon automatisée</p>
+                    <figure>
+                        <img src="image/logo/java.svg" alt="Java" class="logo">
+                    </figure>
                 </article>
             </div>
         </section>
