Update index.html small change

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="https://discord.com/users/397106386129125376" class="social" target="_blank">
                         <img src="image/logo/discord.svg" alt="discord" class="socialImg">
                     </a>
-                    <a href="https://https://fr.namemc.com/profile/THOMASLEO" class="social" target="_blank">
+                    <a href="https://fr.namemc.com/profile/THOMASLEO" class="social" target="_blank">
                         <img src="image/logo/Namemc.svg" alt="Namemc" class="socialImg">
                     </a>
             </article>
