Update delete SASS because github cannot use scss :(

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>R Thomas Pf</title>
-        <link rel="stylesheet" href="/style/Style.css">
+        <link rel="stylesheet" href="/style/Index.css">
     </head>
     <body>
         <!--[if lt IE 7]>
