Update futur proof

--- a/index.html
+++ b/index.html
@@ -71,6 +71,39 @@
                     </figure>
                 </article>
             </div>
+            <!--Futur proof
+            <div class="carteProjets">
+                <article>
+                    <img src="image/Site econocom(3 2).png" class="img" alt="Site web réaliser">
+                    <h3>Création d'un site web</h3>
+                    <p>Un site web à destination de collégiens. Le but est de leur faire 
+                        découvrir l'entreprise <strong>Econocom</strong> et ses activités pour leur proposer des stages.</p>
+                    <figure>
+                        <img src="image/logo/html5.svg" alt="Html" class="logo">
+                        <img src="image/logo/css3.svg" alt="Css" class="logo">
+                        <img src="image/logo/Rlogo.svg" alt="Rlogo" class="logo">
+                    </figure>
+                </article>
+                <article>
+                    <img src="image/SEA_BDD_Titanic(3 2).png" class="img" alt="Image du SEA (Shéma Entité Association) de la base de donnée">
+                    <h3>Base de donnée sur le Titanic</h3>
+                    <p>Une base de donnée sur l'accident du Titanic permettant d'obtenir des 
+                        statistique et du contexte pour comprendres les raisons du nombre important de victimes.</p>
+                    <figure>
+                        <img src="image/logo/postgresql.svg" alt="Postgresql" class="logo">
+                        <img src="image/logo/database.svg" alt="Database" class="logo">
+                    </figure>
+                </article>
+                <article>
+                    <img src="image/Projet_Depeches.png" class="img" alt="Depeches de different types">
+                    <h3>Classification automatique</h3>
+                    <p>Un algorithme de classification de dépche automatique graçe à 
+                        la génération d'un dictionnaire de façon automatisée</p>
+                    <figure>
+                        <img src="image/logo/java.svg" alt="Java" class="logo">
+                    </figure>
+                </article>
+            </div>-->
         </section>
         <!-- FUTURE SECTION
         <section class="secondaire">
