Update correction orthographe

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
         <section class="secondaire" id="projets">
             <div>
-                <h2>Projet</h2>
+                <h2>Projets</h2>
             </div>
             <div class="carteProjets">
                 <article>
@@ -54,8 +54,8 @@
                 <article>
                     <img src="image/SEA_BDD_Titanic(3 2).png" class="img" alt="Image du SEA (Shéma Entité Association) de la base de donnée">
                     <h3>Base de donnée sur le Titanic</h3>
-                    <p>Une base de donnée sur l'accident du Titanic permettant d'obtenir des 
-                        statistique et du contexte pour comprendres les raisons du nombre important de victimes.</p>
+                    <p>Une base de données sur l'accident du Titanic permettant d'obtenir des 
+                        statistique et du contexte pour comprendre les raisons du nombre important de victimes.</p>
                     <figure>
                         <img src="image/logo/postgresql.svg" alt="Postgresql" class="logo">
                         <img src="image/logo/database.svg" alt="Database" class="logo">
