Update test lien dans les article

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                     <h3>Création d'un site web</h3>
                     <p>Un site web à destination de collégiens. Le but est de leur faire 
                         découvrir l'entreprise <strong>Econocom</strong> et ses activités pour leur proposer des stages.</p>
+                        <a href="https://github.com/Thomas-381" class="lien" target="_blank">
+                            <img src="image/logo/github.svg" alt="github" class="lienLogo">
+                        </a>
                     <figure>
                         <img src="image/logo/html5.svg" alt="Html" class="logo">
                         <img src="image/logo/css3.svg" alt="Css" class="logo">
@@ -54,7 +57,7 @@
                 <article>
                     <img src="image/SEA_BDD_Titanic(3 2).png" class="img" alt="Image du SEA (Shéma Entité Association) de la base de donnée">
                     <h3>Base de donnée sur le Titanic</h3>
-                    <p>Une base de données sur l'accident du Titanic permettant d'obtenir des 
+                    <p>Une base de données sur l'accident du <strong>Titanic</strong> permettant d'obtenir des 
                         statistique et du contexte pour comprendre les raisons du nombre important de victimes.</p>
                     <figure>
                         <img src="image/logo/postgresql.svg" alt="Postgresql" class="logo">
@@ -64,7 +67,7 @@
                 <article>
                     <img src="image/Projet_Depeches.png" class="img" alt="Depeches de different types">
                     <h3>Classification automatique</h3>
-                    <p>Un algorithme de classification de dépche automatique graçe à 
+                    <p>Un algorithme de <strong>classification de dépeches</strong> automatique graçe à 
                         la génération d'un dictionnaire de façon automatisée</p>
                     <figure>
                         <img src="image/logo/java.svg" alt="Java" class="logo">
