--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <![endif]-->
         <section class="accueil slide-in-left">
             <h1>Thomas R</h1>
-            <p>Étudiant en BUT informatique</p>
+            <p>Étudiant en BUT informatique à Grenoble</p>
             <article class="carteResau"><!--Liens vers des reseaux sociaux-->
                 <!--<a href="https://www.linkedin.com/in/XXXXXXXXX" title="Linkedin">
                     <img src="image/linkedin.png" alt="linkedin">
