Update add projet detaillée

--- a/index.html
+++ b/index.html
@@ -71,10 +71,15 @@
                     </figure>
                 </article>
             </div>
+            <div>
+                <a href="/page/projets.html">
+                    <button id="titreSecondaire"> Voir d'autres projets </button>
+                </a>
+            </div>
             <!--Futur proof
             <div class="carteProjets">
                 <article>
-                    <img src="image/photoIllustration" class="img" alt="photoIllustration">
+                    <img src="image/photoIllustration" class="img" alt="Image d">
                     <h3>Titre projet</h3>
                     <p>description</p>
                     <figure>
@@ -106,7 +111,7 @@
         -->
         <section class="secondaire footer">
             <!-- https://uiverse.io/cssbuttons-io/funny-dog-69 -->
-            <a href="contact.html">
+            <a href="page/contact.html">
                 <button> Me contacter </button>
             </a>
         </section>
