--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="">
+        <meta name="description" content="Portfolio of a rookie dev">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>R Thomas Pf</title>
         <link rel="stylesheet" href="/style/Index.css">
@@ -76,33 +76,6 @@
                     <button id="titreSecondaire"> Voir d'autres projets </button>
                 </a>
             </div>
-            <!--Futur proof
-            <div class="carteProjets">
-                <article>
-                    <img src="image/photoIllustration" class="img" alt="Image d">
-                    <h3>Titre projet</h3>
-                    <p>description</p>
-                    <figure>
-                        <img src="image/logo/techno.svg" alt="Technologie utilisée" class="logo">
-                    </figure>
-                </article>
-                <article>
-                    <img src="image/photoIllustration" class="img" alt="photoIllustration">
-                    <h3>Titre projet</h3>
-                    <p>description</p>
-                    <figure>
-                        <img src="image/logo/techno.svg" alt="Technologie utilisée" class="logo">
-                    </figure>
-                </article>
-                <article>
-                    <img src="image/photoIllustration" class="img" alt="photoIllustration">
-                    <h3>Titre projet</h3>
-                    <p>description</p>
-                    <figure>
-                        <img src="image/logo/techno.svg" alt="Technologie utilisée" class="logo">
-                    </figure>
-                </article>
-            </div>-->
         </section>
         <!-- FUTURE SECTION
         <section class="secondaire">
