--- a/index.html
+++ b/index.html
@@ -8,32 +8,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Portfolio of a rookie dev">
+        <meta name="description" content="Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>R Thomas Pf</title>
         <link rel="stylesheet" href="/style/Index.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-        <script>
-            $(document).ready(function () {
-            $("html").show();
-
-            $("*[id='mode-dark']").show();
-            $("*[id='mode-light']").hide();
-
-            $("#switch-mode").click(function () {
-                $("*[id='mode-dark']").toggle();
-                $("*[id='mode-light']").toggle();
-
-                if (document.documentElement.getAttribute('data-theme') == 'dark') {
-                    document.documentElement.setAttribute('data-theme', 'light');
-                    $("#mode").removeAttr("src").attr("src", "light.png");
-                } else {
-                    document.documentElement.setAttribute('data-theme', 'dark');
-                    $("#mode").removeAttr("src").attr("src", "dark.png");
-                }
-            });
-        });
-        </script>
+        <script src="scripts/theme.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -43,10 +23,10 @@
         <header>
             <nav>
                 <ul>
-                    futur<br>logo
+                    <a href="#accueil">futur<br>logo</a>
                 </ul>
                 <ul>
-                    projet
+                    <a href="#projets">Projets</a>
                 </ul>
                 <ul>
                     contact
@@ -61,10 +41,7 @@
             </nav>
         </header>
         <main>
-        <section>
-            
-        </section>
-        <section class="accueil slide-in-left">
+        <section class="accueil slide-in-left" id="accueil">
             <h1>Thomas R</h1>
             <p>Étudiant en BUT informatique à Grenoble</p>
             <article class="carteResau"><!--Liens vers des reseaux sociaux-->
@@ -91,7 +68,7 @@
                         </svg>
                     </a>-->
                     <a href="https://github.com/Thomas-381" target="_blank" data-umami-event="Summary GitHub">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24">
                             <g>
                               <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9603 0.244896C5.34442 0.244896 -0.00390625 5.63265 -0.00390625 12.298C-0.00390625 17.626 3.42295 22.1361 8.17691 23.7323C8.77128 23.8523 8.98899 23.473 8.98899 23.1539C8.98899 22.8744 8.9694 21.9167 8.9694 20.9187C5.64124 21.6372 4.94818 19.4819 4.94818 19.4819C4.41332 18.085 3.62083 17.726 3.62083 17.726C2.53152 16.9876 3.70018 16.9876 3.70018 16.9876C4.9085 17.0674 5.54254 18.2248 5.54254 18.2248C6.61201 20.0606 8.33536 19.5419 9.02867 19.2225C9.12761 18.4442 9.44475 17.9055 9.78148 17.6062C7.12703 17.3268 4.33422 16.2891 4.33422 11.6593C4.33422 10.3423 4.80932 9.26473 5.56214 8.42669C5.44336 8.12743 5.02728 6.88996 5.68116 5.23371C5.68116 5.23371 6.69136 4.91437 8.96916 6.47094C9.94436 6.2071 10.9501 6.07288 11.9603 6.07175C12.9705 6.07175 14.0003 6.21159 14.9513 6.47094C17.2293 4.91437 18.2395 5.23371 18.2395 5.23371C18.8934 6.88996 18.4771 8.12743 18.3583 8.42669C19.131 9.26473 19.5865 10.3423 19.5865 11.6593C19.5865 16.2891 16.7936 17.3067 14.1194 17.6062C14.5553 17.9853 14.9314 18.7036 14.9314 19.8411C14.9314 21.4575 14.9118 22.7547 14.9118 23.1536C14.9118 23.473 15.1298 23.8523 15.7239 23.7326C20.4779 22.1358 23.9047 17.626 23.9047 12.298C23.9243 5.63265 18.5564 0.244896 11.9603 0.244896Z"/>
                             </g>
@@ -99,7 +76,7 @@
                     </a>
                     <a href="https://discord.com/users/397106386129125376" class="social" target="_blank">
                         <!--<img src="image/logo/discord.svg" alt="discord" class="socialImg">-->
-                        <svg width="25px" height="25px" viewBox="0 -28.5 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
+                        <svg width="36px" height="36px" viewBox="0 -28.5 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
                             <g>
                                 <path d="M216.856339,16.5966031 C200.285002,8.84328665 
                                 182.566144,3.2084988 164.041564,0 C161.766523,4.11318106 
@@ -130,7 +107,7 @@
                     </a>
                     <a href="https://fr.namemc.com/profile/THOMASLEO" class="social" target="_blank">
                         <!--<img src="image/logo/Namemc.svg" alt="Namemc" class="socialImg">-->
-                        <svg xmlns="http://www.w3.org/2000/svg" class="align-top" height="30" shape-rendering="crispEdges" style="background-color: transparent" viewBox="-8 -8 16 16" width="30">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="align-top" height="45" width="45"shape-rendering="crispEdges" style="background-color: transparent" viewBox="-8 -8 16 16" >
                             <path d="M-5-5L+3-5L+3-3L+5-3L+5+5L+3+5L+3-3L-3-3L-3+5L-5+5"></path>
                         </svg>
                     </a>
