--- a/index.html
+++ b/index.html
@@ -45,12 +45,16 @@
             <h1>Thomas R</h1>
             <p>Étudiant en BUT informatique à Grenoble</p>
             <article class="carteResau"><!--Liens vers des reseaux sociaux-->
-                <!--<a href="https://www.linkedin.com/in/XXXXXXXXX" title="Linkedin">
-                    <img src="image/linkedin.png" alt="linkedin">
-                    </a>-->
-                    <!--<a href="https://github.com/Thomas-381" class="social" target="_blank">
-                        <img src="image/logo/github.svg" alt="github" class="socialImg">-->
-                        <!--<svg width="25px" height="25px" xmlns="http://www.w3.org/2000/svg">
+                <a href="https://www.linkedin.com/in/thomas-reymond-6b0007339/" target="_blank" title="Linkedin">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="36px" height="36px" viewBox="0 0 50 50">
+                        <g>
+                            <path d="M 9 4 C 6.2504839 4 4 6.2504839 4 9 L 4 41 C 4 43.749516 6.2504839 46 9 46 L 41 46 C 43.749516 46 46 43.749516 46 41 L 46 9 C 46 6.2504839 43.749516 4 41 4 L 9 4 z M 9 6 L 41 6 C 42.668484 6 44 7.3315161 44 9 L 44 41 C 44 42.668484 42.668484 44 41 44 L 9 44 C 7.3315161 44 6 42.668484 6 41 L 6 9 C 6 7.3315161 7.3315161 6 9 6 z M 14 11.011719 C 12.904779 11.011719 11.919219 11.339079 11.189453 11.953125 C 10.459687 12.567171 10.011719 13.484511 10.011719 14.466797 C 10.011719 16.333977 11.631285 17.789609 13.691406 17.933594 A 0.98809878 0.98809878 0 0 0 13.695312 17.935547 A 0.98809878 0.98809878 0 0 0 14 17.988281 C 16.27301 17.988281 17.988281 16.396083 17.988281 14.466797 A 0.98809878 0.98809878 0 0 0 17.986328 14.414062 C 17.884577 12.513831 16.190443 11.011719 14 11.011719 z M 14 12.988281 C 15.392231 12.988281 15.94197 13.610038 16.001953 14.492188 C 15.989803 15.348434 15.460091 16.011719 14 16.011719 C 12.614594 16.011719 11.988281 15.302225 11.988281 14.466797 C 11.988281 14.049083 12.140703 13.734298 12.460938 13.464844 C 12.78117 13.19539 13.295221 12.988281 14 12.988281 z M 11 19 A 1.0001 1.0001 0 0 0 10 20 L 10 39 A 1.0001 1.0001 0 0 0 11 40 L 17 40 A 1.0001 1.0001 0 0 0 18 39 L 18 33.134766 L 18 20 A 1.0001 1.0001 0 0 0 17 19 L 11 19 z M 20 19 A 1.0001 1.0001 0 0 0 19 20 L 19 39 A 1.0001 1.0001 0 0 0 20 40 L 26 40 A 1.0001 1.0001 0 0 0 27 39 L 27 29 C 27 28.170333 27.226394 27.345035 27.625 26.804688 C 28.023606 26.264339 28.526466 25.940057 29.482422 25.957031 C 30.468166 25.973981 30.989999 26.311669 31.384766 26.841797 C 31.779532 27.371924 32 28.166667 32 29 L 32 39 A 1.0001 1.0001 0 0 0 33 40 L 39 40 A 1.0001 1.0001 0 0 0 40 39 L 40 28.261719 C 40 25.300181 39.122788 22.95433 37.619141 21.367188 C 36.115493 19.780044 34.024172 19 31.8125 19 C 29.710483 19 28.110853 19.704889 27 20.423828 L 27 20 A 1.0001 1.0001 0 0 0 26 19 L 20 19 z M 12 21 L 16 21 L 16 33.134766 L 16 38 L 12 38 L 12 21 z M 21 21 L 25 21 L 25 22.560547 A 1.0001 1.0001 0 0 0 26.798828 23.162109 C 26.798828 23.162109 28.369194 21 31.8125 21 C 33.565828 21 35.069366 21.582581 36.167969 22.742188 C 37.266572 23.901794 38 25.688257 38 28.261719 L 38 38 L 34 38 L 34 29 C 34 27.833333 33.720468 26.627107 32.990234 25.646484 C 32.260001 24.665862 31.031834 23.983076 29.517578 23.957031 C 27.995534 23.930001 26.747519 24.626988 26.015625 25.619141 C 25.283731 26.611293 25 27.829667 25 29 L 25 38 L 21 38 L 21 21 z"></path>
+                        </g>
+                    </svg>
+                </a>
+                <!--<a href="https://github.com/Thomas-381" class="social" target="_blank">
+                        <img src="image/logo/github.svg" alt="github" class="socialImg">
+                        <svg width="25px" height="25px" xmlns="http://www.w3.org/2000/svg">
                             <g>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M48.854 0C21.839 0 0 22 0 49.217c0 
                                 21.756 13.993 40.172 33.405 46.69 2.427.49 
@@ -67,18 +71,18 @@
                             </g>
                         </svg>
                     </a>-->
-                    <a href="https://github.com/Thomas-381" target="_blank" data-umami-event="Summary GitHub">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24">
-                            <g>
-                              <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9603 0.244896C5.34442 0.244896 -0.00390625 5.63265 -0.00390625 12.298C-0.00390625 17.626 3.42295 22.1361 8.17691 23.7323C8.77128 23.8523 8.98899 23.473 8.98899 23.1539C8.98899 22.8744 8.9694 21.9167 8.9694 20.9187C5.64124 21.6372 4.94818 19.4819 4.94818 19.4819C4.41332 18.085 3.62083 17.726 3.62083 17.726C2.53152 16.9876 3.70018 16.9876 3.70018 16.9876C4.9085 17.0674 5.54254 18.2248 5.54254 18.2248C6.61201 20.0606 8.33536 19.5419 9.02867 19.2225C9.12761 18.4442 9.44475 17.9055 9.78148 17.6062C7.12703 17.3268 4.33422 16.2891 4.33422 11.6593C4.33422 10.3423 4.80932 9.26473 5.56214 8.42669C5.44336 8.12743 5.02728 6.88996 5.68116 5.23371C5.68116 5.23371 6.69136 4.91437 8.96916 6.47094C9.94436 6.2071 10.9501 6.07288 11.9603 6.07175C12.9705 6.07175 14.0003 6.21159 14.9513 6.47094C17.2293 4.91437 18.2395 5.23371 18.2395 5.23371C18.8934 6.88996 18.4771 8.12743 18.3583 8.42669C19.131 9.26473 19.5865 10.3423 19.5865 11.6593C19.5865 16.2891 16.7936 17.3067 14.1194 17.6062C14.5553 17.9853 14.9314 18.7036 14.9314 19.8411C14.9314 21.4575 14.9118 22.7547 14.9118 23.1536C14.9118 23.473 15.1298 23.8523 15.7239 23.7326C20.4779 22.1358 23.9047 17.626 23.9047 12.298C23.9243 5.63265 18.5564 0.244896 11.9603 0.244896Z"/>
-                            </g>
-                        </svg>
-                    </a>
-                    <a href="https://discord.com/users/397106386129125376" class="social" target="_blank">
-                        <!--<img src="image/logo/discord.svg" alt="discord" class="socialImg">-->
-                        <svg width="36px" height="36px" viewBox="0 -28.5 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
-                            <g>
-                                <path d="M216.856339,16.5966031 C200.285002,8.84328665 
+                <a href="https://github.com/Thomas-381" target="_blank" data-umami-event="Summary GitHub">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="36px" height="36px" viewBox="0 0 24 24">
+                        <g>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9603 0.244896C5.34442 0.244896 -0.00390625 5.63265 -0.00390625 12.298C-0.00390625 17.626 3.42295 22.1361 8.17691 23.7323C8.77128 23.8523 8.98899 23.473 8.98899 23.1539C8.98899 22.8744 8.9694 21.9167 8.9694 20.9187C5.64124 21.6372 4.94818 19.4819 4.94818 19.4819C4.41332 18.085 3.62083 17.726 3.62083 17.726C2.53152 16.9876 3.70018 16.9876 3.70018 16.9876C4.9085 17.0674 5.54254 18.2248 5.54254 18.2248C6.61201 20.0606 8.33536 19.5419 9.02867 19.2225C9.12761 18.4442 9.44475 17.9055 9.78148 17.6062C7.12703 17.3268 4.33422 16.2891 4.33422 11.6593C4.33422 10.3423 4.80932 9.26473 5.56214 8.42669C5.44336 8.12743 5.02728 6.88996 5.68116 5.23371C5.68116 5.23371 6.69136 4.91437 8.96916 6.47094C9.94436 6.2071 10.9501 6.07288 11.9603 6.07175C12.9705 6.07175 14.0003 6.21159 14.9513 6.47094C17.2293 4.91437 18.2395 5.23371 18.2395 5.23371C18.8934 6.88996 18.4771 8.12743 18.3583 8.42669C19.131 9.26473 19.5865 10.3423 19.5865 11.6593C19.5865 16.2891 16.7936 17.3067 14.1194 17.6062C14.5553 17.9853 14.9314 18.7036 14.9314 19.8411C14.9314 21.4575 14.9118 22.7547 14.9118 23.1536C14.9118 23.473 15.1298 23.8523 15.7239 23.7326C20.4779 22.1358 23.9047 17.626 23.9047 12.298C23.9243 5.63265 18.5564 0.244896 11.9603 0.244896Z"/>
+                        </g>
+                    </svg>
+                </a>
+                <a href="https://discord.com/users/397106386129125376" class="social" target="_blank">
+                    <!--<img src="image/logo/discord.svg" alt="discord" class="socialImg">-->
+                    <svg width="36px" height="36px" viewBox="0 -28.5 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
+                        <g>
+                            <path d="M216.856339,16.5966031 C200.285002,8.84328665 
                                 182.566144,3.2084988 164.041564,0 C161.766523,4.11318106 
                                 159.108624,9.64549908 157.276099,14.0464379 C137.583995,11.0849896 
                                 118.072967,11.0849896 98.7430163,14.0464379 C96.9108417,9.64549908 
@@ -101,16 +105,16 @@
                                 147.510584,123.290155 147.510584,108.914901 C147.510584,94.5396472 
                                 157.658606,82.7145587 170.525237,82.7145587 C183.391518,82.7145587 
                                 193.761324,94.5189427 193.539891,108.914901 C193.539891,123.290155 
-                                183.391518,135.09489 170.525237,135.09489 Z" fill="#5865F2" fill-rule="nonzero"></path>
-                            </g>
-                        </svg>
-                    </a>
-                    <a href="https://fr.namemc.com/profile/THOMASLEO" class="social" target="_blank">
-                        <!--<img src="image/logo/Namemc.svg" alt="Namemc" class="socialImg">-->
-                        <svg xmlns="http://www.w3.org/2000/svg" class="align-top" height="45" width="45"shape-rendering="crispEdges" style="background-color: transparent" viewBox="-8 -8 16 16" >
-                            <path d="M-5-5L+3-5L+3-3L+5-3L+5+5L+3+5L+3-3L-3-3L-3+5L-5+5"></path>
-                        </svg>
-                    </a>
+                            183.391518,135.09489 170.525237,135.09489 Z" fill="#5865F2" fill-rule="nonzero"></path>
+                        </g>
+                    </svg>
+                </a>
+                <!--<a href="https://fr.namemc.com/profile/THOMASLEO" class="social" target="_blank">
+                        <img src="image/logo/Namemc.svg" alt="Namemc" class="socialImg">-->
+                    <!--<svg xmlns="http://www.w3.org/2000/svg" class="align-top" height="45" width="45"shape-rendering="crispEdges" style="background-color: transparent" viewBox="-8 -8 16 16" >
+                        <path d="M-5-5L+3-5L+3-3L+5-3L+5+5L+3+5L+3-3L-3-3L-3+5L-5+5"></path>
+                    </svg>
+                    </a>--> 
             </article>
         </section>
         <section class="secondaire" id="projets">
@@ -130,7 +134,7 @@
                 </article>
                 <article>
                     <img src="image/SEA_BDD_Titanic(3 2).png" class="img" alt="Image du SEA (Shéma Entité Association) de la base de donnée">
-                    <h3>Base de donnée sur le Titanic</h3>
+                    <h3>Base de données sur le Titanic</h3>
                     <p>Une base de données sur l'accident du <strong>Titanic</strong> permettant d'obtenir des 
                         statistique et du contexte pour comprendre les raisons du nombre important de victimes.</p>
                     <figure>
